@@ -21,4 +21,3 @@
 <br/>
 <div id="{{ attrs.id }}-handsontable-container"></div>
 {{ original_field_html }}
-
